--- a/application.scss
+++ b/application.scss
@@ -84,6 +84,8 @@ div {
     width: 800;
     margin: 0 auto;
     height: 600;
+    position: absolute;
+    margin-top: 100px;
 }
 
 .select-pokemon {
