--- a/application.scss
+++ b/application.scss
@@ -411,6 +411,7 @@ span.my-hp-bar {
     position: absolute;
     top: 20px;
     left: 90px;
+    justify-content: flex-start;
 }
 
 .opp-hp-bar-container {
@@ -422,4 +423,5 @@ span.my-hp-bar {
     position: absolute;
     top: 20px;
     left: 90px;
+    justify-content: flex-start;
 }
