--- a/application.scss
+++ b/application.scss
@@ -1,19 +1,50 @@
 button#start-button {
     position: absolute;
     background-color: transparent;
-    color: red;
-    padding-top: 530px;
+    color: black;
+    padding-top: 216px;
+    padding-bottom: 327px;
     width: 800;
     border: none;
     cursor: pointer;
-    font-weight: 900;
-    font-size: 50px;
+    font-weight: 1000;
+    font-size: 60px;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: white;
     z-index: 99;
+    font-family: 'VT323', monospace;
+    -moz-animation: flash 1s ease-in-out;
+    -moz-animation-iteration-count: 1000;
+    -webkit-animation: flash 1s ease-in-out;
+    -webkit-animation-iteration-count: 1000;
+    -ms-animation: flash 1s ease-in-out;
+    -ms-animation-iteration-count: 1000;
+}
+
+@-webkit-keyframes flash {
+    0% { font-size: 50px; }
+    50% { font-size: 60px; }
+    100% { font-size: 50px; }
+}
+
+@-moz-keyframes flash {
+  0% { font-size: 50px; }
+  50% { font-size: 60px; }
+  100% { font-size: 50px; }
+}
+
+@-ms-keyframes flash {
+  0% { font-size: 50px; }
+  50% { font-size: 60px; }
+  100% { font-size: 50px; }
 }
 
 button#start-button:hover {
-    color: green;
+    color: yellow;
     font-size: 65px;
+    border: none;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: blue;
 }
 
 button.charmander-attack {
@@ -405,6 +436,7 @@ span.my-hp-bar {
 
 .my-hp-bar-container {
     background-color: lightgrey;
+    display: flex;
     height: 20px;
     width: 200px;
     border: 1px solid black;
@@ -424,4 +456,45 @@ span.my-hp-bar {
     top: 20px;
     left: 90px;
     justify-content: flex-start;
+}
+
+body {
+  background-repeat: no-repeat;
+background-size: 1600px 888px;
+background-position: center top;
+display: flex;
+align-items: center;
+font-family: 'VT323', monospace;
+}
+
+button#mute {
+    position: absolute;
+    z-index: 9999;
+    width: 50px;
+    height: 50px;
+    background-image: url("./lib/pics/mute.png");
+    background-size: 100%;
+    background-color: transparent;
+    cursor: pointer;
+    margin-left: 373px;
+    margin-top: 4px;
+    border: none;
+    background-repeat: no-repeat;
+}
+
+button#mute:hover {
+    height: 45px;
+    width: 45px;
+}
+
+h3.logo {
+    position: absolute;
+    background-color: black;
+    color: yellow;
+    width: 199px;
+    height: 48px;
+    line-height: 43px;
+    font-size: 27px;
+    margin-top: 546px;
+    margin-left: 300px;
 }
