--- a/application.scss
+++ b/application.scss
@@ -92,9 +92,9 @@ button.squirtle-attack:hover{
   cursor: pointer;
 }
 
-button#select-bulbasaur {background: transparent;height: 200;margin-top: 50;width: 150;color: transparent;border: none; z-index: 99; cursor: pointer;}
+button#select-bulbasaur {background: transparent;height: 200;margin-top: 50;width: 150;color: transparent;border: none;z-index: 99;cursor: pointer;margin-left: 20px;}
 
-button#select-charmander {background: transparent;height: 200;margin-top: 50;width: 150;margin-left: -60px;color: transparent;border: none; z-index: 99; cursor: pointer;}
+button#select-charmander {background: transparent;height: 200;margin-top: 50;width: 150;margin-left: -32px;color: transparent;border: none;z-index: 99;cursor: pointer;}
 
 button#select-squirtle {
     background: transparent;
