--- a/application.scss
+++ b/application.scss
@@ -51,8 +51,10 @@ button.charmander-attack {
   display: none;
   z-index: 99;
   width: 24%;
-  padding: 40px;
+  padding: 24px;
   align-self: flex-end;
+  font-size: 15;
+  width: 195px;
   background-color: rgba(1000,0,0,.5);
 }
 
@@ -66,8 +68,10 @@ button.bulbasaur-attack {
   display: none;
   z-index: 99;
   width: 24%;
-  padding: 40px;
+  padding: 24px;
   align-self: flex-end;
+  font-size: 15;
+  width: 195px;
   background-color: rgba(0,1000,100,.5);
 }
 
@@ -81,8 +85,10 @@ button.squirtle-attack {
   display: none;
   z-index: 99;
   width: 24%;
-  padding: 40px;
+  padding: 24px;
   align-self: flex-end;
+  font-size: 15;
+  width: 195px;
   background-color: rgba(0,100,1000,.5);
 }
 
