--- a/application.scss
+++ b/application.scss
@@ -469,7 +469,7 @@ span.my-hp-bar {
 
 body {
   background-repeat: no-repeat;
-background-size: 1600px 888px;
+background-size: cover;
 background-position: center top;
 display: flex;
 align-items: center;
